# kitpaw

./: .gitignore  AGENTS.md  README.md  TODO.md  hatch_build.py  pyproject.toml
docs/: code-agent-migration.md  openclaw-python-orchestration.md
docs/code-agents/: zed_limitations.md
kitpaw/: __init__.py  version.py
kitpaw/claw/: __init__.py  apply_patch.py  cli_args.py  context.py  exec_tools.py  main.py  registry.py  resource_loader.py  result_utils.py  runtime.py  system_prompt.py  tools.py
kitpaw/pi_agent/agent/: __init__.py  agent.py  agent_loop.py  types.py
kitpaw/pi_agent/ai/: __init__.py  env_api_keys.py  event_stream.py  local_env.py  models.py  types.py
kitpaw/pi_agent/code_agent/: __init__.py  agent_session.py  cli_args.py  error_logger.py  main.py  message_restore.py  messages.py  resource_loader.py  sdk.py  session_manager.py  session_picker.py  settings_manager.py  system_prompt.py  tool_error_limit.py  types.py
kitpaw/pi_agent/tui/: autocomplete.py  editor_component.py  fuzzy.py  keybindings.py  kill_ring.py  stdin_buffer.py  terminal.py  utils.py
paw/pi_agent/: __init__.py
paw/pi_agent/agent/: agent.py  agent_loop.py  types.py
paw/pi_agent/ai/: __init__.py  event_stream.py  local_env.py  models.py  stream.py  types.py
paw/pi_agent/code_agent/: agent_session.py  auth_storage.py  config.py  export_html.py  main.py  message_restore.py  model_registry.py  package_manager.py  resource_loader.py  sdk.py  session_manager.py  session_picker.py  settings_manager.py  summarizer.py  system_prompt.py
paw/pi_agent/tui/: __init__.py  keys.py  terminal_image.py  (+2 more)
tests/: conftest.py  test_agent_abort.py  test_agent_continue.py  test_code_agent_cli_commands.py  test_code_agent_interactive.py  test_code_agent_real_e2e.py  test_code_agent_rpc.py  test_code_agent_session.py  test_code_agent_tools.py  test_codex_agent.py  test_codex_compaction.py  test_codex_compaction_e2e.py  test_codex_compaction_live.py  test_mock_e2e.py  test_openai_completions.py  test_pi_agent_package.py  test_real_e2e.py  test_tui_components.py  test_tui_fuzzy.py  test_tui_lowlevel.py  test_tui_parity.py  test_version.py  test_zed_agent.py
tests/claw/: test_apply_patch.py  test_cli.py  test_exec_tools.py  test_openclaw_orchestration.py  test_runtime.py  test_system_prompt.py
tests/e2e/: compare_requests.py  full_proxy.py  recording_proxy.py  run_codex_e2e.sh
tests/tui_parity/: reference.ts  snapshot.ts  terminal-harness.ts
(+80 files in other folders)
