[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "kitpaw"
dynamic = ["version"]
description = "Python implementation of paw agents and AI integrations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "jsonschema>=4.23.0",
    "markdown-it-py>=4.0.0",
    "openai>=2.24.0",
    "regex>=2025.9.18",
]

[project.scripts]
pi = "kitpaw.pi_agent.code_agent.main:main"
kitpaw = "kitpaw.pi_agent.code_agent.main:main"
claw = "kitpaw.claw.main:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.15.6",
]

[tool.uv]
package = true

[tool.hatch.metadata.hooks.custom]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "e2e: end-to-end tests",
    "real_e2e: end-to-end tests that call a real OpenAI-compatible upstream",
]
